# C-Experiments

./: CMakeLists.txt
src/: Main.cpp
src/classes/: VariadicClass.h  VariadicFilter.h
src/classes/tests/: VariadicTest.cpp
src/core/: Executer.h  TestSet.h
src/custom/classes/: ObjectLiveness.h  VariadicFilter.h
src/custom/classes/google/: SequenceMain.cpp  SequenceTest.h
src/custom/classes/tests/: CopyTest.cpp  ObjectLivenessTest.cpp  VariadicTest.cpp
src/custom/classes/tests/arena/: Arena.cpp  Arena.h  ArenasTest.cpp
src/custom/pointers/: UniquePointers.h
src/custom/pointers/tests/: Pointers.cpp  UniquePointerTest.cpp
src/memory/results/: ArenasVsVector
src/memory/vector/: VectorEfficiencyTest.h
src/skeleton/: BaseTest.cpp
src/tests/: MemoryTest.h
